# personal-splitwise

./: .env  .gitignore  package.json
api/: .env  auth.py  database.py  expenses.py  groups.py  index.py  models.py  pyproject.toml  requirements.txt  upload.py  users.py  utils.py
api/services/: balance_service.py
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  api.js  index.css  offlineManager.js
client/src/components/: Avatar.jsx  Layout.jsx  SettleUpModal.jsx
client/src/context/: AuthContext.jsx
client/src/pages/: AddExpense.jsx  CreateGroup.jsx  Dashboard.jsx  GroupDetails.jsx  GroupSettings.jsx  JoinGroup.jsx  Login.jsx  Register.jsx  UserProfile.jsx
